--- a/index/Tpl/Index/index.html
+++ b/index/Tpl/Index/index.html
@@ -3,7 +3,7 @@
 <html xmlns:wb="http://open.weibo.com/wb">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>8不够？多1点？?</title>
+<title>8不够？多1点！</title>
 <link href="__PUBLIC__/Index/css/style.css" rel="stylesheet" type="text/css" />
 <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="__PUBLIC__/Index/javascript/jquery.js"></script>
