--- a/index/Tpl/Index/index.html
+++ b/index/Tpl/Index/index.html
@@ -2,13 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <html xmlns:wb="http://open.weibo.com/wb">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>8不够？多1点！</title>
-<link href="__PUBLIC__/Index/css/style.css" rel="stylesheet" type="text/css" />
-<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=" type="text/javascript" charset="utf-8"></script>
-<script type="text/javascript" src="__PUBLIC__/Index/javascript/jquery.js"></script>
-<script type="text/javascript">
-//search focusblur
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>8不够？多1点！</title>
+    <link href="__PUBLIC__/Index/css/style.css" rel="stylesheet" type="text/css" />
+    <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=321965248" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="__PUBLIC__/Index/javascript/jquery.js"></script>
+    <script type="text/javascript">
 	   jQuery.focusblur = function(focusid) {
 	   var focusblurid = $(focusid);
 	   var defval = focusblurid.val();
@@ -42,7 +41,7 @@ $(function() {
 		if( $("#wb").hasClass("wbhide") ) 
 		{
 			$("#wb").removeClass("wbhide"); 
-			$("#wb").animate({height:'280px'},[1000]);
+			$("#wb").animate({height:'370px'},[1000]);
 		}
 		else
 		{
@@ -83,13 +82,13 @@ $(function() {
             <div class="ht_m2">
             	<div class="toutiao">
                 	<dl>
-                    	<dt>8话题之各种新奇节日的风生水起</dt>
+                    	<dt>8话题之<-{$result.title}-></dt>
                         <dd class="d_left">
-                        	<a href="#"><img src="__UPLOAD__/img_w1.jpg" /></a>
-                            <div><span class="fr">苏芩</span><span class="fl">主讲人</span></div>
+                        	<a target="_blank" href="http://weibo.com/u/<-{$result.uid}->"><img src="<-{$result.host_image}->" /></a>
+                            <div><span class="fr"><-{$result.host_name}-></span><span class="fl">主讲人</span></div>
                         </dd>
                         <dd class="d_right">
-                        说起过节，大家的兴奋点应该只会放在放假上了，过节几乎已经失去了节日本身的意义，不过在网络上，大家却创造了许多新的节日，并且过的热热闹闹，风生水起，像是11.11光棍节，10.10萌节，8.18八卦节，5.20我爱你情人节...也许比起传统节日，这些搞怪的节日更能满足现代人的心理，在一个特定的日子，抒发现代人特有的感慨。
+                            <-{$result.content}->
                         </dd>
                     </dl>
                 </div>
@@ -99,49 +98,31 @@ $(function() {
                     	<dt>
                         	1点点评
                         </dt>
+                        <volist name="result.comment" id="rc">
                         <dd>
-                        	<a href="#"><img src="__UPLOAD__/img_w2.jpg" /></a>
+                        	<a target="_blank" href="http://weibo.com/u/<-{$rc.uid}->"><img src="<-{$rc.user_image}->" /></a>
                             <div>
-                            <h2>张亮：</h2>
-                            <p>点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评</p>
+                            <h2><-{$rc.user_name}->：</h2>
+                            <p><-{$rc.content}-></p>
                             </div>
                         </dd>
-                        <dd>
-                        	<a href="#"><img src="__UPLOAD__/img_w3.jpg" /></a>
-                            <div>
-                            <h2>暖小团：</h2>
-                            <p>点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评</p>
-                            </div>
-                        </dd>
-                        <dd>
-                        	<a href="#"><img src="__UPLOAD__/img_w4.jpg" /></a>
-                            <div>
-                            <h2>Mike_D：</h2>
-                            <p>点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评点点评</p>
-                            </div>
-                        </dd>
+                        </volist>
                     </dl>
                 </div>
                 <div class="clear"></div>
                 <div class="btn_ht">
                 	<ul>
-                    	<li class="jv"><a href="#">#话题1#</a></li>
-                        <li class="lv"><a href="#">#话题2#</a></li>
-                        <li class="zi"><a href="#">#话题3#</a></li>
-                        <li class="ye"><a href="#">#话题4#</a></li>
+                        <volist name="list" id="l">
+                            <li class="<-{$l.color}->"><a href="__ACTION__/tid/<-{$key}->">#<-{$l.title}->#</a></li>
+                        </volist>
                     </ul>
                 </div>
             </div>
             <div class="ht_m3">
-            	<div class="search">
-                <form action="" method="get">
-                  <input class="input_selected1" name="" type="text" value="看看大家怎么说" id="searchkey"><input class="button" name="" type="button" value="">
-                </form>
-                </div><!--search end-->
                 <div class="biying">
-                	<a href="javascript:void(0);" id="wbShow">通过必应搜索</a>
+                	<a href="javascript:void(0);" id="wbShow">看看大家怎么说</a>
                 </div>
-                <div class="wbclass wbhide" id="wb"><wb:livestream skin="silver" titlebar="n" width="235" listid="485751195" uid="1052981072" height="290" ></wb:livestream></div>
+                <div class="wbclass wbhide" id="wb"><wb:livestream skin="silver" appkey="321965248" topic="<-{$result.title}->|<-{$result.title}->" width="auto" height="380" member="n" refer="n" ></wb:livestream></div>
             </div>
             <div class="ht_m4"></div>
         </div>
