增加高度自适应js

--- a/index/Tpl/Index/index.html
+++ b/index/Tpl/Index/index.html
@@ -6,7 +6,8 @@
     <title>8不够？多1点！</title>
     <link href="__PUBLIC__/Index/css/style.css" rel="stylesheet" type="text/css" />
     <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=321965248" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="http://js.t.sinajs.cn/t4/enterprise/js/public/appframe/client.js"></script>
+    <script src="http://js.t.sinajs.cn/t4/enterprise/js/public/appframe/appClient.js" type="text/javascript" charset="utf-8"></script>
+    <script src="http://js.t.sinajs.cn/t4/enterprise/js/public/appframe/client.js" type="text/javascript"></script>
     <script type="text/javascript" src="__PUBLIC__/Index/javascript/jquery.js"></script>
     <script type="text/javascript">
 	   jQuery.focusblur = function(focusid) {
