--- a/index/Tpl/Index/index.html
+++ b/index/Tpl/Index/index.html
@@ -144,5 +144,8 @@ $(function() {
           </div>
     </div>
 </div>
+<div style="display: none;">
+    <script src="http://s17.cnzz.com/stat.php?id=5741401&web_id=5741401" language="JavaScript"></script>
+</div>
 </body>
 </html>
