完成 第二阶段 页面及 功能

--- a/index/Tpl/Index/part2.html
+++ b/index/Tpl/Index/part2.html
@@ -97,7 +97,7 @@ $(function() {
             <div class="ht_m2eight">
             	<ul class="tab">
                 	<li class="choice"><a href="#">八Windows多一点</a></li>
-                    <li><a href="#">名人8话题回顾</a></li>
+                    <li><a href="__ROOT__/index/part3">名人8话题回顾</a></li>
                 </ul>
                 <div class="con_eight">
                 	<p>用过Windows系统吗？知道Windows8全新的metro风格吗？</p>
@@ -106,31 +106,30 @@ $(function() {
                     <p>告诉我们你对Windows8.1的好奇，就有可能获得名人的专属点评，</p>
                     <p>更有精致礼品送给你！</p>
                     <p>二等奖：随机抽取150名参与话题征集的网友，送上微软限量版精美贴纸；</p>
-                    <p>一等奖：最终被点赞最多的4个话题提供者，将获得微软限量版精致鼠标。</p>
-                    <h2>为感兴趣的话题点赞，或者说出你想8的那个1点吧</h2>
+                    <p>一等奖：最终被转发最多的4个话题提供者，将获得微软限量版精致鼠标。</p>
+                    <h2>转发感兴趣的话题，或者说出你想8的那个1点吧</h2>
                     <div class="fabu">
-                    <form action="" method="get">
-                      <input class="input_selected1 w300" name="" type="text" value="#8不够&nbsp;多1点#" id="fabukey"><input name="" type="button" value="" class="btn_fabu" onclick="tosend();"/>
-                    </form>
+                        <span style="float: right;">最新分享：</span>
+                      <wb:publish action="pubilish" type="web" language="zh_cn" button_type="red" button_size="middle" button_text="说出我想8的那个1点" uid="1652987982" tag="8不够多一点" ></wb:publish>
                     </div><!--fabu end-->
                     <div class="squbox">
                     	<ul class="squ squ1 mr2">
-                        	<li class="li3 color1 mb2"><a href="#" class="btn_z"></a></li>
-                            <li class="li4 color2"><a href="#" class="btn_z"></a></li>
+                        	<li class="li3 color1 mb2"><wb:publish action="forward" type="web" language="zh_cn" button_type="red" button_size="small" button_text="转发" mid="Akl37wvpO" uid="1652987982" tag="8不够多1点" ></wb:publish></li>
+                            <li class="li4 color2"><wb:publish action="forward" type="web" language="zh_cn" button_type="red" button_size="small" button_text="转发" mid="Akl37wvpO" uid="1652987982" tag="8不够多1点" ></wb:publish></li>
                         </ul>
                         <ul class="squ squ1 mr2">
-                        	<li class="li3 color3 mb2"><a href="#" class="btn_z"></a></li>
-                            <li class="li1 color4 mb2 mr2"><a href="#" class="btn_z"></a></li>
-                            <li class="li1 color5 mb2"><a href="#" class="btn_z"></a></li>
-                            <li class="li3 color6"><a href="#" class="btn_z"></a></li>
+                        	<li class="li3 color3 mb2"><wb:publish action="forward" type="web" language="zh_cn" button_type="red" button_size="small" button_text="转发" mid="Akl37wvpO" uid="1652987982" tag="8不够多1点" ></wb:publish></li>
+                            <li class="li1 color4 mb2 mr2"><wb:publish action="forward" type="web" language="zh_cn" button_type="red" button_size="small" button_text="转发" mid="Akl37wvpO" uid="1652987982" tag="8不够多1点" ></wb:publish></li>
+                            <li class="li1 color5 mb2"><wb:publish action="forward" type="web" language="zh_cn" button_type="red" button_size="small" button_text="转发" mid="Akl37wvpO" uid="1652987982" tag="8不够多1点" ></wb:publish></li>
+                            <li class="li3 color6"><wb:publish action="forward" type="web" language="zh_cn" button_type="red" button_size="small" button_text="转发" mid="Akl37wvpO" uid="1652987982" tag="8不够多1点" ></wb:publish></li>
                         </ul>
                         <ul class="squ squ2 mr2">
-                        	<li class="li2 color7 mb2"><a href="#" class="btn_z"></a></li>
-                            <li class="li1 color8"><a href="#" class="btn_z"></a></li>
+                        	<li class="li2 color7 mb2"><wb:publish action="forward" type="web" language="zh_cn" button_type="red" button_size="small" button_text="转发" mid="Akl37wvpO" uid="1652987982" tag="8不够多1点" ></wb:publish></li>
+                            <li class="li1 color8"><wb:publish action="forward" type="web" language="zh_cn" button_type="red" button_size="small" button_text="转发" mid="Akl37wvpO" uid="1652987982" tag="8不够多1点" ></wb:publish></li>
                         </ul>
                         <ul class="squ squ1 mr2">
-                        	<li class="li4 color9 mb2"><a href="#" class="btn_z"></a></li>
-                            <li class="li3 color10"><a href="#" class="btn_z"></a></li>
+                        	<li class="li4 color9 mb2"><wb:publish action="forward" type="web" language="zh_cn" button_type="red" button_size="small" button_text="转发" mid="Akl37wvpO" uid="1652987982" tag="8不够多1点" ></wb:publish></li>
+                            <li class="li3 color10"><wb:publish action="forward" type="web" language="zh_cn" button_type="red" button_size="small" button_text="转发" mid="Akl37wvpO" uid="1652987982" tag="8不够多1点" ></wb:publish></li>
                         </ul>
                         <div class="clear"></div>
                     </div>
