--- a/index/Tpl/Index/index.html
+++ b/index/Tpl/Index/index.html
@@ -9,6 +9,26 @@
     <script src="http://js.t.sinajs.cn/t4/enterprise/js/public/appframe/appClient.js" type="text/javascript" charset="utf-8"></script>
     <script src="http://js.t.sinajs.cn/t4/enterprise/js/public/appframe/client.js" type="text/javascript"></script>
     <script type="text/javascript" src="__PUBLIC__/Index/javascript/jquery.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/Index/javascript/scrollpic.js"></script>
+    <script type="text/javascript">
+        $(function() {
+            $("#wbShow").click(function()
+            {
+                if( $("#wb").hasClass("wbhide") )
+                {
+                    $("#wb").removeClass("wbhide");
+                    $("#wb").animate({height:'404px'},[1000]);
+                }
+                else
+                {
+                    $("#wb").animate({height:'0px'},[1000]);
+                    $("#wb").addClass("wbhide");
+                }
+
+            });
+        })
+    </script>
+
     <script type="text/javascript">
 	   jQuery.focusblur = function(focusid) {
 	   var focusblurid = $(focusid);
@@ -113,36 +133,147 @@ $(function() {
                     </dl>
                 </div>
 
-                <div class="btn_ht">
-                	<ul>
-                        <volist name="list" id="l">
-                            <li class="<-{$l.color}->"><a href="__ACTION__/tid/<-{$key}->#anchor">#<-{$l.title}->#</a></li>
-                        </volist>
-                    </ul>
-                </div>
             </div>
             <div class="ht_m3">
                 <div class="biying">
                 	<a href="javascript:void(0);" id="wbShow">看看大家怎么说</a>
                 </div>
-                <div class="wbclass wbhide" id="wb"><wb:livestream skin="silver" appkey="321965248" topic="<-{$result.title}->|<-{$result.title}->" width="auto" height="430" member="n" refer="n" ></wb:livestream></div>
+                <div class="wbclass wbhide" id="wb"><wb:livestream skin="silver" appkey="321965248" topic="8%E4%B8%8D%E5%A4%9F%20%E5%A4%9A1%E7%82%B9|8%E4%B8%8D%E5%A4%9F%20%E5%A4%9A1%E7%82%B9" width="auto" height="430" member="n" refer="n" ></wb:livestream></div>
             </div>
             <div class="ht_m4"></div>
         </div>
         <div class="ht_bot"></div>
     </div>
+
     <div class="ninebox">
-           <div class="floorMain">
-                <a href="" class="item1"><img src="__PUBLIC__/Index/images/n1.jpg"><div class="mask"></div></a>
-                <a href="" class="item2"><img src="__PUBLIC__/Index/images/n2.jpg"><div class="mask"></div></a>
-                <a href="" class="item3"><img src="__PUBLIC__/Index/images/n3.jpg"><div class="mask"></div></a>
-                <a href="" class="item4"><img src="__PUBLIC__/Index/images/n4.jpg"><div class="mask"></div></a>
-                <a href="" class="item5"><img src="__PUBLIC__/Index/images/n5.jpg"><div class="mask"></div></a>
-                <a href="" class="item6"><img src="__PUBLIC__/Index/images/n6.jpg"><div class="mask"></div></a>
-                <a href="" class="item7"><img src="__PUBLIC__/Index/images/n7.jpg"><div class="mask"></div></a>
-                <a href="" class="item8"><img src="__PUBLIC__/Index/images/n8.jpg"><div class="mask"></div></a>
-          </div>
+        <div class="floorMain">
+            <div class="whitebg"><a target="_blank" href="http://www.samsung.com/cn/consumer/computers-office/ultra-mobile-pc/ativ-tab/XE300TZC-K01CN?subsubtype=ativ-tab-3"><img src="__PUBLIC__/index/images/n1.jpg"></a></div>
+            <div class="whitebg" id="picgun1">
+                <ul>
+                    <li>
+                        <a target="_blank" href="http://www.samsung.com/cn/consumer/computers-office/ultra-mobile-pc/ativ-tab/XE300TZC-K01CN?subsubtype=ativ-tab-3"><img src="__PUBLIC__/index/images/n2.jpg"></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="http://www.samsung.com/cn/consumer/computers-office/ultra-mobile-pc/ativ-tab/XE300TZC-K01CN?subsubtype=ativ-tab-3"><img src="__PUBLIC__/index/images/n4.jpg"></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="http://www.samsung.com/cn/consumer/computers-office/ultra-mobile-pc/ativ-tab/XE300TZC-K01CN?subsubtype=ativ-tab-3"><img src="__PUBLIC__/index/images/n5.jpg"></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="http://www.samsung.com/cn/consumer/computers-office/ultra-mobile-pc/ativ-tab/XE300TZC-K01CN?subsubtype=ativ-tab-3"><img src="__PUBLIC__/index/images/n7.jpg"></a>
+                    </li>
+                </ul>
+                <div class="clear"></div>
+            </div>
+            <div class="whitebg"><a target="_blank" href="http://www.sonystyle.com.cn/products/vaio/t111.htm"><img src="__PUBLIC__/index/images/n3.jpg"></a></div>
+            <div class="whitebg" id="picgun2">
+                <ul>
+                    <li>
+                        <a target="_blank" href="http://www.sonystyle.com.cn/products/vaio/t111.htm"><img src="__PUBLIC__/index/images/n4.jpg"></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="http://www.sonystyle.com.cn/products/vaio/t111.htm"><img src="__PUBLIC__/index/images/n2.jpg"></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="http://www.sonystyle.com.cn/products/vaio/t111.htm"><img src="__PUBLIC__/index/images/n5.jpg"></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="http://www.sonystyle.com.cn/products/vaio/t111.htm"><img src="__PUBLIC__/index/images/n7.jpg"></a>
+                    </li>
+                </ul>
+                <div class="clear"></div>
+            </div>
+            <div class="whitebg" id="picgun3">
+                <ul>
+                    <li>
+                        <a target="_blank" href="http://www.asus.com.cn/Notebooks_Ultrabooks/ASUS_Transformer_Book_T100/"><img src="__PUBLIC__/index/images/n5.jpg"></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="http://www.asus.com.cn/Notebooks_Ultrabooks/ASUS_Transformer_Book_T100/"><img src="__PUBLIC__/index/images/n2.jpg"></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="http://www.asus.com.cn/Notebooks_Ultrabooks/ASUS_Transformer_Book_T100/"><img src="__PUBLIC__/index/images/n7.jpg"></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="http://www.asus.com.cn/Notebooks_Ultrabooks/ASUS_Transformer_Book_T100/"><img src="__PUBLIC__/index/images/n4.jpg"></a>
+                    </li>
+                </ul>
+                <div class="clear"></div>
+            </div>
+            <div class="whitebg"><a target="_blank" href="http://www.asus.com.cn/Notebooks_Ultrabooks/ASUS_Transformer_Book_T100/"><img src="__PUBLIC__/index/images/n6.jpg"></a></div>
+            <div class="whitebg" id="picgun4">
+                <ul>
+                    <li>
+                        <a target="_blank" href="http://www.lenovo.com.cn/"><img src="__PUBLIC__/index/images/n7.jpg"></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="http://www.lenovo.com.cn/"><img src="__PUBLIC__/index/images/n2.jpg"></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="http://www.lenovo.com.cn/"><img src="__PUBLIC__/index/images/n4.jpg"></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="http://www.lenovo.com.cn/"><img src="__PUBLIC__/index/images/n5.jpg"></a>
+                    </li>
+                </ul>
+                <div class="clear"></div>
+            </div>
+            <div class="whitebg"><a target="_blank" href="http://www.lenovo.com.cn/"><img src="__PUBLIC__/index/images/n8.jpg"></a></div>
+        </div>
     </div>
+    <script language="javascript">
+        var scrollPic_01 = new ScrollPic();
+        var scrollPic_02 = new ScrollPic();
+        var scrollPic_03 = new ScrollPic();
+        var scrollPic_04 = new ScrollPic();
+
+        scrollPic_01.scrollContId   = "picgun1"; //内容容器ID
+        scrollPic_01.arrLeftId      = "LeftArr1";//左箭头ID
+        scrollPic_01.arrRightId     = "RightArr1"; //右箭头ID
+        scrollPic_01.frameWidth     = 204;//显示框宽度
+        scrollPic_01.pageWidth      = 204; //翻页宽度
+        scrollPic_01.speed          = 20; //移动速度(单位毫秒，越小越快)
+        scrollPic_01.space          = 20; //每次移动像素(单位px，越大越快)
+        scrollPic_01.autoPlay       = true; //自动播放
+        scrollPic_01.autoPlayTime   = 3; //自动播放间隔时间(秒)
+        scrollPic_01.initialize(); //初始化
+
+        scrollPic_02.scrollContId   = "picgun2"; //内容容器ID
+        scrollPic_02.arrLeftId      = "LeftArr2";//左箭头ID
+        scrollPic_02.arrRightId     = "RightArr2"; //右箭头ID
+        scrollPic_02.frameWidth     = 204;//显示框宽度
+        scrollPic_02.pageWidth      = 204; //翻页宽度
+        scrollPic_02.speed          = 20; //移动速度(单位毫秒，越小越快)
+        scrollPic_02.space          = 20; //每次移动像素(单位px，越大越快)
+        scrollPic_02.autoPlay       = true; //自动播放
+        scrollPic_02.autoPlayTime   = 4; //自动播放间隔时间(秒)
+        scrollPic_02.initialize(); //初始化
+
+        scrollPic_03.scrollContId   = "picgun3"; //内容容器ID
+        scrollPic_03.arrLeftId      = "LeftArr3";//左箭头ID
+        scrollPic_03.arrRightId     = "RightArr3"; //右箭头ID
+        scrollPic_03.frameWidth     = 204;//显示框宽度
+        scrollPic_03.pageWidth      = 204; //翻页宽度
+        scrollPic_03.speed          = 20; //移动速度(单位毫秒，越小越快)
+        scrollPic_03.space          = 20; //每次移动像素(单位px，越大越快)
+        scrollPic_03.autoPlay       = true; //自动播放
+        scrollPic_03.autoPlayTime   = 3; //自动播放间隔时间(秒)
+        scrollPic_03.initialize(); //初始化
+
+        scrollPic_04.scrollContId   = "picgun4"; //内容容器ID
+        scrollPic_04.arrLeftId      = "LeftArr4";//左箭头ID
+        scrollPic_04.arrRightId     = "RightArr4"; //右箭头ID
+        scrollPic_04.frameWidth     = 204;//显示框宽度
+        scrollPic_04.pageWidth      = 204; //翻页宽度
+        scrollPic_04.speed          = 20; //移动速度(单位毫秒，越小越快)
+        scrollPic_04.space          = 20; //每次移动像素(单位px，越大越快)
+        scrollPic_04.autoPlay       = true; //自动播放
+        scrollPic_04.autoPlayTime   = 4; //自动播放间隔时间(秒)
+        scrollPic_04.initialize(); //初始化
+
+    </script>
+
+
 </div>
 <div style="display: none;">
     <script src="http://s17.cnzz.com/stat.php?id=5741401&web_id=5741401" language="JavaScript"></script>
