增加文字链接

--- a/index/Tpl/Index/index.html
+++ b/index/Tpl/Index/index.html
@@ -66,7 +66,7 @@
                         <dd>
                         	<a target="_blank" href="http://weibo.com/u/<-{$rc.uid}->"><img src="<-{$rc.user_image}->" /></a>
                             <div>
-                            <h2><span class="yellow-v"><-{$rc.user_name}-></span>：</h2>
+                            <h2><a target="_blank" style="color: #ffffff;" href="http://weibo.com/u/<-{$rc.uid}->"><span class="yellow-v"><-{$rc.user_name}-></span></a>：</h2>
                             <p><-{$rc.content}-></p>
                             </div>
                         </dd>
