--- a/index/Tpl/Index/index.html
+++ b/index/Tpl/Index/index.html
@@ -96,13 +96,10 @@
                         <a target="_blank" href="http://www.samsung.com/cn/consumer/computers-office/ultra-mobile-pc/ativ-tab/XE300TZC-K01CN?subsubtype=ativ-tab-3"><img src="__PUBLIC__/Index/images/n2.jpg"></a>
                     </li>
                     <li>
-                        <a target="_blank" href="http://www.samsung.com/cn/consumer/computers-office/ultra-mobile-pc/ativ-tab/XE300TZC-K01CN?subsubtype=ativ-tab-3"><img src="__PUBLIC__/Index/images/n4.jpg"></a>
+                        <a target="_blank" href="http://www.samsung.com/cn/consumer/computers-office/ultra-mobile-pc/ativ-tab/XE300TZC-K01CN?subsubtype=ativ-tab-3"><img src="__UPLOAD__/1.jpg"></a>
                     </li>
                     <li>
-                        <a target="_blank" href="http://www.samsung.com/cn/consumer/computers-office/ultra-mobile-pc/ativ-tab/XE300TZC-K01CN?subsubtype=ativ-tab-3"><img src="__PUBLIC__/Index/images/n5.jpg"></a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="http://www.samsung.com/cn/consumer/computers-office/ultra-mobile-pc/ativ-tab/XE300TZC-K01CN?subsubtype=ativ-tab-3"><img src="__PUBLIC__/Index/images/n7.jpg"></a>
+                        <a target="_blank" href="http://www.samsung.com/cn/consumer/computers-office/ultra-mobile-pc/ativ-tab/XE300TZC-K01CN?subsubtype=ativ-tab-3"><img src="__UPLOAD__/2.jpg"></a>
                     </li>
                 </ul>
                 <div class="clear"></div>
@@ -114,13 +111,10 @@
                         <a target="_blank" href="http://www.sonystyle.com.cn/products/vaio/t111.htm"><img src="__PUBLIC__/Index/images/n4.jpg"></a>
                     </li>
                     <li>
-                        <a target="_blank" href="http://www.sonystyle.com.cn/products/vaio/t111.htm"><img src="__PUBLIC__/Index/images/n2.jpg"></a>
+                        <a target="_blank" href="http://www.sonystyle.com.cn/products/vaio/t111.htm"><img src="__UPLOAD__/3.jpg"></a>
                     </li>
                     <li>
-                        <a target="_blank" href="http://www.sonystyle.com.cn/products/vaio/t111.htm"><img src="__PUBLIC__/Index/images/n5.jpg"></a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="http://www.sonystyle.com.cn/products/vaio/t111.htm"><img src="__PUBLIC__/Index/images/n7.jpg"></a>
+                        <a target="_blank" href="http://www.sonystyle.com.cn/products/vaio/t111.htm"><img src="__UPLOAD__/4.jpg"></a>
                     </li>
                 </ul>
                 <div class="clear"></div>
@@ -149,13 +143,10 @@
                         <a target="_blank" href="http://www.lenovo.com.cn/"><img src="__PUBLIC__/Index/images/n7.jpg"></a>
                     </li>
                     <li>
-                        <a target="_blank" href="http://www.lenovo.com.cn/"><img src="__PUBLIC__/Index/images/n2.jpg"></a>
+                        <a target="_blank" href="http://www.lenovo.com.cn/"><img src="__UPLOAD__/7.jpg"></a>
                     </li>
                     <li>
-                        <a target="_blank" href="http://www.lenovo.com.cn/"><img src="__PUBLIC__/Index/images/n4.jpg"></a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="http://www.lenovo.com.cn/"><img src="__PUBLIC__/Index/images/n5.jpg"></a>
+                        <a target="_blank" href="http://www.lenovo.com.cn/"><img src="__UPLOAD__/8.jpg"></a>
                     </li>
                 </ul>
                 <div class="clear"></div>
