--- a/index/Tpl/Index/index.html
+++ b/index/Tpl/Index/index.html
@@ -17,7 +17,7 @@
                 if( $("#wb").hasClass("wbhide") )
                 {
                     $("#wb").removeClass("wbhide");
-                    $("#wb").animate({height:'404px'},[1000]);
+                    $("#wb").animate({height:'424px'},[1000]);
                 }
                 else
                 {
@@ -48,13 +48,13 @@
                 	<dl>
                     	<dt>8话题之<-{$result.title}-></dt>
                         <dd class="d_left">
-                        	<a target="_blank" href="http://weibo.com/u/<-{$result.uid}->"><img src="<-{$result.host_image}->" /></a>
                             <div><span class="fr"><-{$result.host_name}-></span><span class="fl">主讲人</span></div>
                         </dd>
+                        <div class="clear"></div>
                         <dd class="d_right">
                             <-{$result.content}->
                         </dd>
-                    </dl><div class="clear"></div>
+                    </dl>
                 </div>
 
                 <div class="discuss">
@@ -79,7 +79,7 @@
                 <div class="biying">
                 	<a href="javascript:void(0);" id="wbShow">看看大家怎么说</a>
                 </div>
-                <div class="wbclass wbhide" id="wb"><wb:livestream skin="silver" appkey="321965248" topic="8%E4%B8%8D%E5%A4%9F%20%E5%A4%9A1%E7%82%B9|8%E4%B8%8D%E5%A4%9F%20%E5%A4%9A1%E7%82%B9" width="auto" height="430" member="n" refer="n" ></wb:livestream></div>
+                <div class="wbclass wbhide" id="wb"><wb:livestream skin="silver" appkey="321965248" topic="8%E4%B8%8D%E5%A4%9F%20%E5%A4%9A1%E7%82%B9|8%E4%B8%8D%E5%A4%9F%20%E5%A4%9A1%E7%82%B9" width="auto" height="450" member="n" refer="n" ></wb:livestream></div>
             </div>
             <div class="ht_m4"></div>
         </div>
