--- a/index/Tpl/Index/index.html
+++ b/index/Tpl/Index/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="ht_m3">
                 <div class="biying">
-                	<a href="javascript:void(0);" id="wbShow">看看大家怎么说</a>
+                	<a href="javascript:void(0);" id="wbShow" style="color: #ffffff;">看看大家怎么说</a>
                 </div>
                 <div class="wbclass wbhide" id="wb"><wb:livestream skin="silver" appkey="321965248" topic="8%E4%B8%8D%E5%A4%9F%20%E5%A4%9A1%E7%82%B9|8%E4%B8%8D%E5%A4%9F%20%E5%A4%9A1%E7%82%B9" width="auto" height="450" member="n" refer="y" ></wb:livestream></div>
             </div>
