--- a/index/Tpl/Index/index.html
+++ b/index/Tpl/Index/index.html
@@ -12,22 +12,40 @@
     <script type="text/javascript" src="__PUBLIC__/Index/javascript/scrollpic.js"></script>
     <script type="text/javascript">
         $(function() {
-            $("#wbShow").click(function()
+            $("#wbShow").click(function(event)
             {
-                if( $("#wb").hasClass("wbhide") )
-                {
-                    $("#wb").removeClass("wbhide");
-                    $("#wb").animate({height:'424px'},[1000]);
-                }
-                else
-                {
-                    $("#wb").animate({height:'0px'},[1000]);
-                    $("#wb").addClass("wbhide");
-                }
+                //取消事件冒泡
+                event.stopPropagation();
+                $("#wb").removeClass("wbhide");
+                $("#wb").animate({height:'474px'},[1000]);
+            });
+
+            $("document").bind("click", function(){
+
+                $("#wb").animate({height:'0px'},[1000]);
+                $("#wb").addClass("wbhide");
 
             });
+
+            $("#wb").bind('mouseover', function(){
+
+                $(document).unbind("click");
+            });
+
+            $("#wb").bind('mouseout', function(){
+
+                $(document).bind("click", function(){
+
+                    $("#wb").animate({height:'0px'},[1000]);
+                    $("#wb").addClass("wbhide");
+
+                });
+            });
         })
+
+
     </script>
+
 </head>
 <body>
 <div class="contain">
@@ -76,9 +94,8 @@
 
             </div>
             <div class="ht_m3">
-                <div class="biying">
-                	<a href="javascript:void(0);" id="wbShow" style="color: #ffffff;">看看大家怎么说</a>
-                </div>
+                    <a href="javascript:void(0);" id="wbShow"><img src="__PUBLIC__/index/images/search.jpg" width="294" height="37" border="0" /></a>
+
                 <div class="wbclass wbhide" id="wb"><wb:livestream skin="silver" appkey="321965248" topic="8%E4%B8%8D%E5%A4%9F%20%E5%A4%9A1%E7%82%B9|8%E4%B8%8D%E5%A4%9F%20%E5%A4%9A1%E7%82%B9" width="auto" height="450" member="n" refer="y" ></wb:livestream></div>
             </div>
             <div class="ht_m4"></div>
