更新 联想 图片 链接

--- a/index/Tpl/Index/index.html
+++ b/index/Tpl/Index/index.html
@@ -162,7 +162,7 @@
             <div class="whitebg" id="picgun4">
                 <ul>
                     <li>
-                        <a target="_blank" href="http://www.lenovo.com.cn/"><img src="__PUBLIC__/Index/images/n7.jpg"></a>
+                        <a target="_blank" href="http://appserver.lenovo.com.cn/lenovo_product_Detail.aspx?gdsid=A2100021256"><img src="__PUBLIC__/Index/images/n7.jpg"></a>
                     </li>
                     <!--
                     <li>
@@ -175,7 +175,7 @@
                 </ul>
                 <div class="clear"></div>
             </div>
-            <div class="whitebg"><a target="_blank" href="http://www.lenovo.com.cn/"><img src="__PUBLIC__/Index/images/n8.jpg"></a></div>
+            <div class="whitebg"><a target="_blank" href="http://appserver.lenovo.com.cn/lenovo_product_Detail.aspx?gdsid=A2100021256"><img src="__PUBLIC__/Index/images/n8.jpg"></a></div>
         </div>
     </div>
     <!--
