更新第二阶段页面 内容

--- a/index/Tpl/Index/part2.html
+++ b/index/Tpl/Index/part2.html
@@ -110,7 +110,7 @@ $(function() {
                     <h2>转发感兴趣的话题，或者说出你想8的那个1点吧</h2>
                     <div class="fabu">
                         <span style="float: right;">最新分享：</span>
-                      <wb:publish action="pubilish" type="web" language="zh_cn" button_type="red" button_size="middle" button_text="说出我想8的那个1点" uid="1652987982" tag="8不够多一点" ></wb:publish>
+                      <a style="display: block;color: #ffffff; background: #00C6FF;width:360px;" href="http://widget.weibo.com/dialog/PublishWeb.php?uid=1652987982&&tag=8%E4%B8%8D%E5%A4%9F%E5%A4%9A%E4%B8%80%E7%82%B9&language=zh_cn&button=pubilish" target="_blank">自定义发微博样式，点此发布微博</a>
                     </div><!--fabu end-->
                     <div class="squbox">
                     	<ul class="squ squ1 mr2">
