将话题切换为第二个

--- a/index/Tpl/Index/index.html
+++ b/index/Tpl/Index/index.html
@@ -65,7 +65,7 @@
             	<div class="toutiao">
                 	<dl>
                     	<dt>8话题之<-{$result.title}-></dt>
-                        <dd class="d_left">
+                        <dd class="d_left" style="width: 135px;">
                             <div><span class="fr" style="font-size: 18px;"><-{$result.host_name}-></span><span class="fl" style="font-size: 18px;">主讲人</span></div>
                         </dd>
                         <div class="clear"></div>
