--- a/index/Tpl/Index/part2.html
+++ b/index/Tpl/Index/part2.html
@@ -129,7 +129,7 @@ $(function() {
                                         
                                     </div>
                                 </div>
-                                <div class="btn_praise"><a href="http://widget.weibo.com/dialog/PublishWeb.php?app_src=w8ffy&mid=<-{$r.mid|getCodeByMid}->&refer=y&tag=8%E4%B8%8D%E5%A4%9F%E5%A4%9A1%E7%82%B9&language=zh_cn&button=forward" target="_blank"><-{$r.reposts_count}-></a></div>
+                                <div class="btn_praise"><a href="http://widget.weibo.com/dialog/PublishWeb.php?app_src=w8ffy&mid=<-{$r.mid|getCodeByMid}->&refer=y&default_text=%E5%A5%BD%E5%A4%9A%E4%BA%BA%E5%9C%A8%E8%AE%A8%E8%AE%BAWindows+8.1%E5%91%A2%EF%BC%8C%E6%88%91%E5%92%8C%E4%BD%A0%E6%9C%89%E4%B8%80%E6%A0%B7%E7%9A%84%E5%A5%BD%E5%A5%87%7E%7E%E7%9B%86%E5%8F%8B%E4%BB%AC%E5%BF%AB%E6%9D%A5%E7%BB%99%E4%BD%A0%E6%84%9F%E5%85%B4%E8%B6%A3%E7%9A%84%E8%AF%9D%E9%A2%98%E7%82%B9%E8%B5%9E%E5%88%86%E4%BA%AB%EF%BC%8C%E5%B0%B1%E6%9C%89%E6%9C%BA%E4%BC%9A%E8%8E%B7%E5%BE%97%E5%BE%AE%E8%BD%AF%E9%80%81%E5%87%BA%E7%9A%84%E7%B2%BE%E8%87%B4%E7%A4%BC%E7%89%A9%E5%93%A6%EF%BC%81%40%E5%BE%AE%E8%BD%AFWindows &language=zh_cn&button=forward" target="_blank"><-{$r.reposts_count}-></a></div>
                                 
                             </li>
 
@@ -357,7 +357,7 @@ $(function() {
                 new Marquee("MarqueeDiv",0,1,430,290,30,0,0)
                 </script>
                 <div class="clear10"></div>
-                <a href="http://widget.weibo.com/dialog/PublishWeb.php?app_src=w8ffy&uid=1652987982&&tag=8%E4%B8%8D%E5%A4%9F%E5%A4%9A%E4%B8%80%E7%82%B9&language=zh_cn&button=pubilish&app" class="btn_wybyx" target="_blank"></a>
+                <a href="http://widget.weibo.com/dialog/PublishWeb.php?app_src=w8ffy&default_text=%23%E5%85%ABWindows%E5%A4%9A%E4%B8%80%E7%82%B9%23+%E5%AF%B9%E4%BA%8EWindows+8.1%EF%BC%8C%E4%BD%A0%E4%BB%AC%E4%B8%80%E5%AE%9A%E4%B9%9F%E6%9C%89%E4%B8%8D%E5%B0%91%E5%A5%BD%E5%A5%87%E5%90%A7%EF%BC%8C%E5%BF%AB%E6%9D%A5%E5%8F%91%E8%A1%A8%E8%AF%9D%E9%A2%98%EF%BC%8C%E6%9C%89%E6%9C%BA%E4%BC%9A%E8%AE%A9%E5%90%8D%E4%BA%BA%E7%94%A8%E4%BD%A0%E7%9A%84%E8%AF%9D%E9%A2%98%E6%8B%8D%E8%A7%86%E9%A2%91%E5%93%A6%EF%BC%81%E6%88%91%E5%85%88%E5%88%86%E4%BA%AB%E6%88%91%E7%9A%84%E5%A5%BD%E5%A5%87%EF%BC%9A&language=zh_cn&button=pubilish&app" class="btn_wybyx" target="_blank"></a>
                 <div class="clear10"></div>
                 <div class="btn_foot">
                     <a href="javascript:void(0);" id="one1" onclick="setTab('one',1,2);return false;">活动规则</a><a href="javascript:void(0);" id="one2" onclick="setTab('one',2,2);return false;">奖品设置</a>
@@ -368,7 +368,9 @@ $(function() {
                     <div class="sharp_con">
                     	<div class="sharp_row1"></div>
                         <ul class="huodong">
-                        	<li class="gz1">用过Windows系统吗？ 知道Windows8全新的modern风格吗？知道升级到Windows8.1了吗？</li>
+                        	<li class="gz1">用过Windows系统吗？</li>
+                            <li class="gz1">知道Windows8全新的modern风格吗？</li>
+                            <li class="gz1">知道升级到Windows8.1了吗？</li>
                             <li class="gz1">Windows8.1将带给你多1点体验，多1点惊喜！</li>
                             <li class="gz1">发布话题告诉我们你对Windows8.1的好奇，就有可能获得名人专属视频点评，给你感兴趣的话题点赞，更有精致礼品送给你！</li>
                         </ul>
