--- a/index/Tpl/Index/part3.html
+++ b/index/Tpl/Index/part3.html
@@ -104,7 +104,7 @@ $(function() {
                             <dd>
                                 <a href="http://weibo.com/u/<-{$rc.uid}->" target="_blank"><img src="<-{$rc.user_image}->" /></a>
                                 <div>
-                                    <h2><-{$rc.user_name}->：</h2>
+                                    <h2><span class="yellow-v"><-{$rc.user_name}-></span>：</h2>
                                     <p><-{$rc.content}-></p>
                                 </div>
                             </dd>
