更改遗留问题

--- a/index/Tpl/Index/part2.html
+++ b/index/Tpl/Index/part2.html
@@ -126,7 +126,7 @@ $(function() {
                                      </eq>
                                         <dt></dt>
                                         <dd>
-                                            <a href="#"><img src="<-{$r.user_profile_image_url}->" /></a>
+                                            <a href="http://weibo.com/u/<-{$r.uid}->" target="_blank"><img src="<-{$r.user_profile_image_url}->" /></a>
                                             <h2><-{$r.user_screen_name}-></h2>
                                             <P><-{$r.user_description}-></P>
                                         </dd>
